# axum

./: .env  Cargo.toml
src/: main.rs  router.rs
src/handler/: user_handler.rs
src/model/: user.rs
templates/: create.html  header.html  index.html  update.html
templates/layouts/: guest_layout.html
