[package]
name = "rustweb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
